<resources>
    <string name="app_name">Weather</string>
    <string name="search_location">Search Location</string>
    <string name="city_name">City Name</string>
    <string name="_20">20</string>
    <string name="time">TIME</string>
    <string name="uv">UV</string>
    <string name="rain">RAIN</string>
    <string name="aq">AQ</string>
    <string name="sunrise_amp_sunset">SUNRISE &amp; SUNSET</string>
    <string name="sunrise">SUNRISE</string>
    <string name="sunset">SUNSET</string>
    <string name="length_of_day">LENGTH OF DAY</string>
    <string name="remaining_daylight">REMAINING DAYLIGHT</string>
    <string name="daylight">DAYLIGHT</string>
    <string name="wind">WIND</string>
    <string name="hourly_forecast">HOURLY FORECAST</string>
    <string name="day">DAY</string>
    <string name="day_lower">day</string>
    <string name="night">night</string>
    <string name="daily_forecast">DAILY FORECAST</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="no_saved_locations">No saved locations yet</string>
    <string name="add_to_list">Add to list</string>
    <string name="added_to_list">Added to list</string>
    <string name="use_current_location">Use current location</string>
    <string name="set_as_default">Set as default</string>
    <string name="location_set_as_default">%s установлен как основной</string>
    <string name="planets">PLANETS</string>
    <string name="aspects">ASPECTS</string>
    <string name="natal_wheel_chart">NATAL WHEEL CHART</string>
    <string name="astro_forecast">Astro Forecast</string>
    <string name="advice">Загрузка совета на день...</string>
</resources>