<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/ll_astro_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/astro_forecast"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_planets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/planets"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_planets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:foregroundGravity="top"
            android:overScrollMode="never" />

        <TextView
            android:id="@+id/tv_aspects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/aspects"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_aspects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:foregroundGravity="top"
            android:overScrollMode="never" />


        <TextView
            android:id="@+id/tv_natal_wheel_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/natal_wheel_chart"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_natal_wheel_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

        </ImageView>


    </LinearLayout>

</ScrollView>