<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="7dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_grey_shape"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_planet_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_clear" />

        <TextView
            android:id="@+id/tv_planet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/time"
            android:textColor="@color/dark_grey"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_sign_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_clear" />

            <TextView
                android:id="@+id/tv_degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center_vertical"
                android:text="@string/day_lower"
                android:textColor="@color/dark_grey"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tv_sing_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/_20"
                android:textColor="@color/dark_grey"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>